# shipflow

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_tenants.py  0002_create_users.py  0003_create_meli_accounts.py  0004_create_domain_models.py  0005_create_poll_cursors.py
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: __init__.py  accounts.py  auth.py  deps.py  health.py  oauth.py  orders.py  tenants.py  webhooks.py
backend/app/core/: __init__.py  config.py  crypto.py  db.py  db_types.py  errors.py  logging.py  security.py
backend/app/integrations/: __init__.py
backend/app/models/: __init__.py  event_outbox.py  meli_account.py  order.py  order_item.py  poll_cursor.py  shipment.py  tenant.py  user.py  variant.py  variant_barcode.py  webhook_event.py
backend/app/repositories/: __init__.py  event_outbox.py  meli_account.py  order.py  order_item.py  poll_cursor.py  shipment.py  tenant.py  user.py  variant.py  variant_barcode.py  webhook_event.py
backend/app/schemas/: __init__.py  meli_account.py  tenant.py
backend/app/services/: __init__.py  auth.py  ingestion.py  meli_account.py  oauth.py  order.py  tenant.py  webhook_intake.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_cli.py  test_core.py  test_ingestion.py  test_logging.py  test_meli_account.py  test_meli_client.py  test_oauth.py  test_orders.py  test_polling.py  test_shipments_and_orders.py  test_tenant.py  test_variants.py  test_webhook_and_outbox.py  test_webhooks.py
(+23 files in other folders)
