[project]
name = "shipflow"
version = "0.1.0"
description = "Order Fulfillment System for Mercado Libre Sellers"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "itsdangerous>=2.2",
    "httpx>=0.27",
    "arq>=0.26",
    "redis>=5.2",
    "pypdf>=5.1",
    "python-barcode>=0.15",
    "bcrypt>=4.2",
    "cryptography>=43.0",
    # zoneinfo (stdlib) reads the IANA tz database from the OS; Windows ships none,
    # so the display_tz conversion in templates needs this data package (T8).
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "aiosqlite>=0.20",
    "respx>=0.21",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
